Use webrtc::VideoFrame timestamp in RTCVideoEncoder

This CL fixes input timestamp mismatch in RTCVideoEncoder, which
broke googAvgEncodeMs and googEncodeUsagePercent stats in webrtc-internals
for hardware encoders.
With this change, we start using WebRTC given timestamp() so that
OveruseFrameDetector can match the timestamps and calculate the stats.

BUG=597087
TEST=googAvgEncodeMs and googEncodeUsagePercent works on Mac(H264) and
veyron_jerry(VP8).

Review-Url: https://codereview.chromium.org/2205623002
Cr-Commit-Position: refs/heads/master@{#414589}

Former-commit-id: e3195490a63d9545fb1bfe560aa21680ba0b5843